--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,13 +1,15 @@
 {
   "dependencies": {
-    "com.unity.ide.visualstudio": "2.0.17",
+    "com.unity.ide.visualstudio": "2.0.18",
     "com.unity.ide.vscode": "1.2.5",
-    "com.unity.inputsystem": "1.5.0",
+    "com.unity.inputsystem": "1.6.1",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.ugui": "1.0.0",
-    "com.unity.xr.arcore": "4.2.7",
-    "com.unity.xr.arfoundation": "4.2.7",
-    "com.unity.xr.arkit": "4.2.7",
+    "com.unity.xr-content.xr-sim-environments": "file:../ContentPackages\\com.unity.xr-content.xr-sim-environments-1.0.0.tgz",
+    "com.unity.xr.arcore": "5.0.6",
+    "com.unity.xr.arfoundation": "5.0.6",
+    "com.unity.xr.arkit": "5.0.6",
+    "com.unity.xr.openxr": "1.8.1",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
