--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,15 +1,14 @@
 {
   "dependencies": {
     "com.unity.ide.visualstudio": "2.0.22",
-    "com.unity.ide.vscode": "1.2.5",
     "com.unity.inputsystem": "1.7.0",
-    "com.unity.textmeshpro": "3.0.7",
-    "com.unity.ugui": "1.0.0",
+    "com.unity.ugui": "2.0.0",
     "com.unity.xr-content.xr-sim-environments": "file:../ContentPackages\\com.unity.xr-content.xr-sim-environments-1.0.0.tgz",
     "com.unity.xr.arcore": "5.1.2",
-    "com.unity.xr.arfoundation": "5.1.1",
+    "com.unity.xr.arfoundation": "5.1.2",
     "com.unity.xr.arkit": "5.1.2",
     "com.unity.xr.openxr": "1.9.1",
+    "com.unity.modules.accessibility": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
